CAMBIOS CRUD PARA: - Rent - Sale - Agreement